[FEAT] caption style fixed, user button visible

--- a/src/caption.css
+++ b/src/caption.css
@@ -15,7 +15,7 @@
 #caption-script {
   position: fixed;
   bottom: 10px;
-  right: 10px;
+  left: 10px;
   width: 300px;
   height: 200px;
   overflow: auto;
